--- a/templates/delete_account.html
+++ b/templates/delete_account.html
@@ -98,7 +98,9 @@
 <div class='card'>
     <h1>You are Banned. Delete Account</h1>
  <p><form action="/delete-account" method="post" onsubmit="return confirm('Are you sure you want to delete your account?');">
-    <button type='submit' class='ui'>Delete Account</button></form></p>
+    <button type='submit' class='ui'>Delete Account</button></form><form action="/signout" method="POST">
+  <button class='ui' type="submit">Sign out</button>
+    </form></p>
 </div>
 </body>
 
