Updated Settings and added change password functionality

--- a/templates/delete_account.html
+++ b/templates/delete_account.html
@@ -100,7 +100,7 @@
  <p><form action="/delete-account" method="post" onsubmit="return confirm('Are you sure you want to delete your account?');">
     <button type='submit' class='ui'>Delete Account</button></form><form action="/signout" method="POST">
   <button class='ui' type="submit">Sign out</button>
-    </form></p>
+    </form><a href='/settings'><button class='ui'>Settings</button></a></p>
 </div>
 </body>
 
