--- a/templates/settings.html
+++ b/templates/settings.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Settings</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
  
 </head>
 <body>
@@ -50,107 +51,11 @@
     <p>Last login: {{ user_lookup.login }}</p>
     <p>Account Created: {{ user_lookup.created }}</p>
     <p>Clicks Per second: {{ user_lookup.cps }}</p>
+    <a href='/logs'><button class='ui'>View my Logs</button></a>
     <hr>
     <p><a href='/dashboard'><button class='ui'>back To dashboard</button></a></p>
     </ul>
     
   </div>
 </body>
- <style>
-    @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
-
-* {
-  font-family: 'Rubik', sans-serif;
-  
-}
-li {
-  color: white;
-}
-.ui {
-background-color: #dbdada;
-border: none;
-color: #000000;
-padding: 12px 24px;
-font-size: 16px;
-font-weight: bold;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-border-radius: 10px;
-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.7);
-backdrop-filter: blur(5px);
-padding: auto;
-margin: 10px;
-transition: 300ms;
-
-}
-.button {
-background-color: #dbdada;
-border: none;
-color: #000000;
-padding: 12px 24px;
-font-size: 16px;
-font-weight: bold;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-border-radius: 10px;
-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.7);
-backdrop-filter: blur(5px);
-padding: auto;
-margin: 10px;
-transition: 300ms;
-}
-.ui:hover {
- color: #ffffff;
- transition: 0.7s;
- background-color: #189cd9 ;
- box-shadow: 0 12px 6px 0 rgba(255, 255, 255, 0.10),0 17px 16px 0 rgba(73, 73, 73, 0.50);
-}  
-   
-   body {
-    background-color: #d12b26;
-  }
-   h1 {
-     color:white;
-     margin:5px;
-   }
-   h2 {
-     color:white;
-   }
-   h3 {
-     color:white;
-   }
-   .card {
-    opacity: 0.8;
-    background-color: black;
-    border-radius: 10px;
-    z-index: 100;
-    color: black;
-    text-align: center;
-    margin: auto;
-    width: 50%;
-    height: 50%;
-    padding:5px;
-  }
-   .hidden {
-     visibility:hidden;
-     width: 0;
-     height: 0;
-   }
-   p{
-     color: white;
-   }
-   label {
-     text-align:center;
-     color: white;
-     margin: 2px;
-   }
-   input {
-     margin: 2px;
-   }
-   form {
-     margin: 2px;
-   }
-  </style>
 </html>
