Remade Admin control

--- a/static/style.css
+++ b/static/style.css
@@ -152,3 +152,9 @@ hr {
 .logs {
   max-height: 40%;
 }
+table {
+    max-height: 300px;
+    overflow-y: auto;
+    border-collapse: collapse;
+    width: 100%;
+}
