--- a/templates/admin_user_actions.html
+++ b/templates/admin_user_actions.html
@@ -19,6 +19,19 @@
       <p><a href="{{ url_for('view_user_logs', username=user['username']) }}"><button class='ui'>View user Logs</button></a></p>
       
         <h2>User Management</h2>
+      {% if user.username not in ['admin', 'Arjun'] %}
+      <form action="/admin-control" method="POST" style="display: inline;">
+          <input type="hidden" name="username" value="{{ user.username }}">
+          <select name="action">
+              <option value="promote">Promote</option>
+              {% if user.is_admin %}
+              <option value="demote">Demote</option>
+              {% endif %}
+          </select>
+          <button type="submit">Submit</button>
+      </form>
+      {% endif %}
+      
         <form action="/admin-control/update-balance" method="POST">
             <input type="hidden" name="username" value="{{ user.username }}">
             <label for="amount">Amount:</label>
@@ -31,7 +44,7 @@
             <button class="ui" type="submit">Update Balance</button>
         </form>
 
-        <form action='admin_control/update-banned-users' method="POST">
+        <form action='/admin-control/update-banned-users' method="POST">
             <input type="hidden" name="username" value="{{ user.username }}">
             <label for="action">Action:</label>
             <select id="action" name="action" required>
@@ -40,6 +53,13 @@
             </select>
             <button type="submit">Submit</button>
         </form>
+
+      {% if user.username not in ['admin', 'Arjun'] %}
+      <form action="/admin-control/delete-account" method="POST" onsubmit="return confirm('Are you sure you want to delete this account?');" style="display: inline;">
+          <input type="hidden" name="username" value="{{ user.username }}">
+          <button type="submit" class="button">Delete</button>
+      </form>
+      {% endif %}
 
         <!-- Add more user management actions as needed -->
 
