Finalised and deployed Messaging to Production

--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,9 @@ transition: 300ms;
  background-color: #189cd9 ;
  box-shadow: 0 12px 6px 0 rgba(255, 255, 255, 0.10),0 17px 16px 0 rgba(73, 73, 73, 0.50);
 }  
-
+.logs {
+  max-height:100%;
+}
    body {
     background-color: #d12b26;
   }
