--- a/templates/logs.html
+++ b/templates/logs.html
@@ -9,7 +9,7 @@
   <div class='card'>
     <h1>User Logs</h1>
     {% if logs %}
-        <table>
+        <table class='logs'>
             <thead>
                 <tr>
                     <th>Time</th>
