--- a/templates/admin_user_actions.html
+++ b/templates/admin_user_actions.html
@@ -16,6 +16,7 @@
         <p>Banned Status: {% if user.banned %}Banned{% else %}Not Banned{% endif %}</p>
         <p>Last Login: {{ user.login }}</p>
         <p>Account Created: {{ user.created }}</p>
+      <p>Frozen Status: {{ user.frozen }}</p>
       <p><a href="{{ url_for('view_user_logs', username=user['username']) }}"><button class='ui'>View user Logs</button></a></p>
       
         <h2>User Management</h2>
@@ -53,6 +54,15 @@
             </select>
             <button type="submit">Submit</button>
         </form>
+      <form action='/admin-control/update-frozen-users' method="POST">
+          <input type="hidden" name="username" value="{{ user.username }}">
+          <label for="action">Action:</label>
+          <select id="action" name="action" required>
+              <option value="add">Freeze Account</option>
+              <option value="remove">Unfreeze account</option>
+          </select>
+          <button type="submit">Submit</button>
+      </form>
 
       {% if user.username not in ['admin', 'Arjun'] %}
       <form action="/admin-control/delete-account" method="POST" onsubmit="return confirm('Are you sure you want to delete this account?');" style="display: inline;">
