--- a/templates/settings.html
+++ b/templates/settings.html
@@ -51,6 +51,7 @@
     <p>Last login: {{ user_lookup.login }}</p>
     <p>Account Created: {{ user_lookup.created }}</p>
     <p>Clicks Per second: {{ user_lookup.cps }}</p>
+    <p>Email: {{ user_lookup.email }}</p>
     <a href='/logs'><button class='ui'>View my Logs</button></a>
     <hr>
     <p><a href='/dashboard'><button class='ui'>back To dashboard</button></a></p>
