Not much, some bugfixes

--- a/templates/verification_wait.html
+++ b/templates/verification_wait.html
@@ -29,8 +29,7 @@
   <p><form action='/signout' method='POST'>
     <button class='ui'>Signout</button>
   </form></p>
-  <p><form action="/delete-account" method="post" onsubmit="return confirm('Are you sure you want to delete your account?');">
-      <button type='submit' class='ui'>Delete Account</button></form></p>
+  <p>Wrong Email?  <a href='/change-email-form'><button class='ui'>Change Email</button></a></p>
   
 </div>
 </body>
