--- a/templates/settings.html
+++ b/templates/settings.html
@@ -23,6 +23,9 @@
     <p><form action="/user-delete" method="post" onsubmit="return confirm('Are you sure you want to delete your account?');">
     <button type='submit' class='ui'>Delete Account</button></form></p>
     <hr>
+    <h2>Change Email</h2>
+    <a href='/change-email-form'><button class='ui'>Change Email</button></a>
+    <hr>
     <p><h2>Change Password</h2></p>
     <form action="/change-password"method="POST" >
         <label for="old_password">Old Password:</label>
